--- a/style/style.css
+++ b/style/style.css
@@ -53,12 +53,14 @@ body{
     width: 100%;
     height: 60px;
     z-index: 1;
+    /* background: black; */
 }
 .box_all{
     max-width: 1920px;
     min-height: 200vh;
     /* border: 4px solid red; */
     margin: 0 auto;
+    overflow: hidden;
 }
 .box_one{
     height: 912px;
@@ -82,7 +84,7 @@ a.social_icons__discord{
     height: 35px;
     width: 35px;
     cursor: pointer;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     z-index: 100000;
     display: flex;
     align-items: center;
@@ -142,6 +144,9 @@ nav{
     width: 591.1px;
     border: 1px solid rgba(174, 94, 76, 1)    
 }
+.nav_elements__one{
+    margin-left: 10px;
+}
 .nav_elements__one,
 .nav_elements__two,
 .nav_elements__three,
@@ -158,7 +163,9 @@ nav{
     color: rgba(255, 255, 255, 1);
     text-decoration: none;
     text-transform: uppercase;
-    margin: 0 10px;    
+    margin: 0 10px; 
+    /* border: 2px solid red;  */
+    text-align: center;  
 }
 .nav_elements__three{
     width: 105px;
@@ -168,6 +175,12 @@ nav{
     font-weight: 400;
     line-height: 29px;
 }
+.elements3_1{
+    position: relative;
+    left: 22px;
+    top: -19px;
+}
+
 .box_ducks{
     height: 750px;
     width: 750px;
@@ -577,7 +590,19 @@ line-height: 48px;
 }
 
 
-
+/* белая шумь */
+.grain {
+    width: 100%;
+    height: 110%;
+    z-index: -1;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    bottom: 0px;
+    right: 0px;
+    /* border: 2px solid red; */
+    opacity: 08;
+  }
 
 
 
